# qt00

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
build-scripts/: mac.build.sh
build-scripts/appdmg/: spec.json
